--- a/index.html
+++ b/index.html
@@ -157,6 +157,25 @@
         }
        
     </style>
+
+    <!-- Event snippet for Evo Control - Pixel conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof(url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+          'send_to': 'AW-16603309359/3u1mCPbxoboZEK_Kie09',
+          'transaction_id': '',
+          'event_callback': callback
+      });
+      return false;
+    }
+    </script>
+    
 </head>
 <body style="background-color: #880D11;">
 
