--- a/index.html
+++ b/index.html
@@ -472,7 +472,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         </div>
     </div>
 </div>
-
+<div class="container">
+    <section class="text-center">
+        <p style="font-size: 1px;">O Evo Control é um suplemento alimentar composto por ingredientes naturais. Embora seja formulado para auxiliar na manutenção da saúde, não deve ser considerado um substituto para uma alimentação balanceada ou tratamentos médicos. Antes de iniciar o uso, consulte um profissional de saúde, especialmente se estiver grávida, amamentando, tiver alguma condição médica ou estiver tomando medicamentos. Os resultados podem variar de pessoa para pessoa. O Evo Control não tem a intenção de diagnosticar, tratar, curar ou prevenir qualquer doença. Mantenha fora do alcance de crianças.</p>
+    </section>
+</div>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Bootstrap JS -->
