--- a/3p247.html
+++ b/3p247.html
@@ -84,15 +84,15 @@
 <div class="container mt-3 mb-3">
     <div class="row p-4">
         <div class="col-md-4 mx-auto my-auto">
-            <img src="6potes.svg" class="img-fluid" alt="Evo Control 6 Potes">
+            <img src="3potes.svg" class="img-fluid" alt="Evo Control 6 Potes">
         </div>
         <div class="col-md-6 mx-auto my-auto">
             <div class="promo-section">
                 <h2 class="fw-bold">🔥 Promoção Exclusiva!</h2>
                 <p class="fs-4">Adquira <b>6 unidades do Evo Control</b> por apenas </p>
-                <p class="price"><span class="old-price fs-3">R$1197,00</span> <br> <span class="fw-bold fs-2">R$299,00</span></p>
+                <p class="price"><span class="old-price fs-3">R$1197,00</span> <br> <span class="fw-bold fs-2">R$247,00</span></p>
                 <button class="btn btn-custom">
-                    <a class="text-white fw-bold" style="text-decoration: none;" href="#compra">QUERO MEU EVO CONTROL AGORA!</a>
+                    <a class="text-white fw-bold" style="text-decoration: none;" href="https://ev.braip.com/campanhas/cpa/camm28g6k">QUERO MEU EVO CONTROL AGORA!</a>
                 </button>
             </div>
         </div>
