--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <div class="col-12 mx-auto"><img src="frete.svg" class="img-fluid"></div>
                         </div> 
                     </div>
-                    <button href="#preco" class="btn custom-btn shadow-lg fw-bolder"><a href="" class="text-white" style="text-decoration: none;"">COMPRAR AGORA</a></button>
+                    <button class="btn custom-btn shadow-lg fw-bolder"><a href="https://ev.braip.com/campanhas/cpa/camp21g5k" class="text-white" style="text-decoration: none;">COMPRAR AGORA</a></button>
                 </div>
             </div>
         </div>
@@ -273,7 +273,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <div class="col-12 mx-auto"><img src="frete.svg" class="img-fluid"></div>
                         </div> 
                     </div>
-                    <button href="#preco" class="btn custom-btn shadow-lg fw-bolder"><a href="" class="text-white" style="text-decoration: none;"">COMPRAR AGORA</a></button>
+                    <button class="btn custom-btn shadow-lg fw-bolder"><a href="https://ev.braip.com/campanhas/cpa/camn2g8xp" class="text-white" style="text-decoration: none;">COMPRAR AGORA</a></button>
                 </div>
             </div>
         </div>
@@ -290,7 +290,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <div class="col-12 mx-auto"><img src="frete.svg" class="img-fluid"></div>
                         </div> 
                     </div>
-                    <button href="#preco" class="btn custom-btn shadow-lg fw-bolder"><a href="" class="text-white" style="text-decoration: none;"">COMPRAR AGORA</a></button>
+                    <button class="btn custom-btn shadow-lg fw-bolder"><a href="https://ev.braip.com/campanhas/cpa/camrlog97" class="text-white" style="text-decoration: none;">COMPRAR AGORA</a></button>
                 </div>
             </div>
         </div>
@@ -354,7 +354,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     <p class="fs-5 fw-bold" style="font-size: 1.1em; line-height: 1.6; color: #333;">
                         Nós acreditamos tanto nos benefícios do Evo Control que oferecemos uma garantia de 30 dias. Se você não estiver satisfeito com os resultados, devolvemos o seu dinheiro. Compre com confiança e experimente a transformação na sua saúde.
                     </p>
-                    <button href="#preco" class="btn custom-btn shadow-lg fw-bolder text-center"><a class="text-white text-center" style="text-decoration: none;" href="#preco">QUERO MEU EVO CONTROL AGORA!</a></button>
+                    <button class="btn custom-btn shadow-lg fw-bolder text-center"><a class="text-white text-center" style="text-decoration: none;" href="#preco">QUERO MEU EVO CONTROL AGORA!</a></button>
                 </div>
             </div>
         </div>
