--- a/index.html
+++ b/index.html
@@ -160,21 +160,16 @@
 
     <!-- Event snippet for Evo Control - Pixel conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16603309359">
+</script>
 <script>
-    function gtag_report_conversion(url) {
-      var callback = function () {
-        if (typeof(url) != 'undefined') {
-          window.location = url;
-        }
-      };
-      gtag('event', 'conversion', {
-          'send_to': 'AW-16603309359/3u1mCPbxoboZEK_Kie09',
-          'transaction_id': '',
-          'event_callback': callback
-      });
-      return false;
-    }
-    </script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16603309359');
+</script>
     
 </head>
 <body style="background-color: #880D11;">
